--- a/views/widgets_gradiens.html
+++ b/views/widgets_gradiens.html
@@ -48,9 +48,9 @@
                 </div>
                 <div id="collapseOne2" class="panel-collapse collapse in">
                     <div class="panel-body">
-                        <div class="row">
+                        <div class="row" ng-repeat="(quest, val) in morrOptions.y ">
 
-                            <div class="col-md-3 col-sm-6" ng-repeat="(quest, val) in morrOptions.y ">
+                            <div class="col-md-3 col-sm-6" >
                                 <section class="widget">
                                         <header>
                                             <h4>
@@ -67,6 +67,26 @@
                                             </div>  
 
 
+
+                                        </div>
+                                    </section>
+                            </div>
+                        
+                        <div class="col-md-3 col-sm-6" >
+                                <section class="widget">
+                                        <header>
+                                            <h4>
+                                                Prueba
+                                            </h4>
+                                            <div class="widget-controls">
+                                                <a data-widgster="expand" title="Expand" href="#"><i class="glyphicon glyphicon-chevron-up"></i></a>
+                                                <a data-widgster="collapse" title="Collapse" href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
+                                                <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
+                                            </div>
+                                        </header>
+                                        <div class="widget-body">
+                                            
+                                             <div data-morris-chart data-type="line" data-height="343px" id="line_{{quest}}">
 
                                         </div>
                                     </section>
