--- a/views/widgets_gradiens.html
+++ b/views/widgets_gradiens.html
@@ -54,7 +54,7 @@
                                 <section class="widget">
                                         <header>
                                             <h4>
-                                                {{quest}} </span>
+                                                {{quest}} 
                                             </h4>
                                             <div class="widget-controls">
                                                 <a data-widgster="expand" title="Expand" href="#"><i class="glyphicon glyphicon-chevron-up"></i></a>
@@ -72,17 +72,26 @@
                                     </section>
                             </div>
                         
-                        <div class="col-md-3 col-sm-6" >
+                        <div class="col-md-9 col-sm-6" >
                                 <section class="widget">
                                         <header>
                                             <h4>
-                                                Prueba
+                                                {{quest}}
                                             </h4>
-                                            <div class="widget-controls">
-                                                <a data-widgster="expand" title="Expand" href="#"><i class="glyphicon glyphicon-chevron-up"></i></a>
-                                                <a data-widgster="collapse" title="Collapse" href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
-                                                <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
+                                            <div class="btn-group">
+                                                <a class="btn btn-sm btn-default dropdown-toggle" href="#" data-toggle="dropdown">
+
+                                                    <i class="fa fa-angle-down "></i>
+                                                </a>
+                                                <ul class="dropdown-menu">
+                                                    <li><a id="hour" ng-click="changeLineInterval(1)">Por hora</a></li>
+                                                    <li><a id="fourhour" ng-click="changeLineInterval(4)">Cada 4 horas</a></li>
+                                                    <li><a id="halfday" ng-click="changeLineInterval(12)">Cada 12 horas</a></li>
+                                                    <li><a id="day" ng-click="changeLineInterval(24)">Por dia</a></li>
+
+                                                </ul>
                                             </div>
+                                            
                                         </header>
                                         <div class="widget-body">
                                             
@@ -103,6 +112,9 @@
                     </div>
                 </div>
             </div>
+                
+                
+                
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h5 class="panel-title">
@@ -115,9 +127,9 @@
                 <div id="collapseTwo2" class="panel-collapse collapse in">
                     <div class="panel-body">
                         
-                        <div class="row">
+                        <div class="row" ng-repeat="(quest, val) in morrOptions.x ">
 
-                            <div class="col-md-3 col-sm-6" ng-repeat="(quest, val) in morrOptions.x ">
+                            <div class="col-md-3 col-sm-6" >
                                 <section class="widget">
                                         <header>
                                             <h4>
@@ -138,8 +150,31 @@
                                         </div>
                                     </section>
                             </div>
+                        
+                        
+                         <div class="col-md-9 col-sm-6" >
+                                <section class="widget">
+                                        <header>
+                                            <h4>
+                                                {{quest}}
+                                            </h4>
+                                            <div class="widget-controls">
+                                                <a data-widgster="expand" title="Expand" href="#"><i class="glyphicon glyphicon-chevron-up"></i></a>
+                                                <a data-widgster="collapse" title="Collapse" href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
+                                                <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
+                                            </div>
+                                        </header>
+                                        <div class="widget-body">
+                                            
+                                             <div data-morris-chart data-type="line" data-height="343px" id="line_{{quest}}">
+
+                                        </div>
+                                    </section>
+                            </div>
 
 
+
+                        </div> 
 
 
                         </div>
