--- a/views/widgets_gradiens.html
+++ b/views/widgets_gradiens.html
@@ -158,10 +158,18 @@
                                             <h4>
                                                 {{quest}}
                                             </h4>
-                                            <div class="widget-controls">
-                                                <a data-widgster="expand" title="Expand" href="#"><i class="glyphicon glyphicon-chevron-up"></i></a>
-                                                <a data-widgster="collapse" title="Collapse" href="#"><i class="glyphicon glyphicon-chevron-down"></i></a>
-                                                <a href="#" data-widgster="close"><i class="glyphicon glyphicon-remove"></i></a>
+                                            <div class="btn-group">
+                                                <a class="btn btn-sm btn-default dropdown-toggle" href="#" data-toggle="dropdown">
+
+                                                    <i class="fa fa-angle-down "></i>
+                                                </a>
+                                                <ul class="dropdown-menu">
+                                                    <li><a id="hour" ng-click="changeLineInterval(1)">Por hora</a></li>
+                                                    <li><a id="fourhour" ng-click="changeLineInterval(4)">Cada 4 horas</a></li>
+                                                    <li><a id="halfday" ng-click="changeLineInterval(12)">Cada 12 horas</a></li>
+                                                    <li><a id="day" ng-click="changeLineInterval(24)">Por dia</a></li>
+
+                                                </ul>
                                             </div>
                                         </header>
                                         <div class="widget-body">
