--- a/views/partials/sidebar.html
+++ b/views/partials/sidebar.html
@@ -32,9 +32,8 @@
                 <i class="toggle fa fa-angle-down"></i>
             </a>
             <ul id="sidebar-dashboard" class="collapse">
-                <li><a data-ui-sref="app.page({ page: 'dashboard', child: null })">Dashboard</a></li>
-                <li><a data-ui-sref="app.page({ page: 'widgets', child: null })">Widgets</a></li>
-				<li><a data-ui-sref="app.page({ page: 'widgets_gradiens', child: null })">Widgets Grad</a></li>
+               
+				<li><a data-ui-sref="app.page({ page: 'widgets_gradiens', child: null })">Dashboard Principal</a></li>
             </ul>
         </li>
       
