--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -17,7 +17,7 @@
         </ul>
      
         <!-- xs & sm screen logo -->
-        <a class="navbar-brand visible-xs" href="index.html">
+        <a class="navbar-brand visible-xs" href="#">
             <i class="fa fa-circle text-gray mr-n-sm"></i>
             <i class="fa fa-circle text-warning"></i>
             &nbsp;
@@ -43,9 +43,15 @@
         </form>  -->
         <ul class="nav navbar-nav navbar-right">
             
+           
+            
             <li class="dropdown">
                 <a href class="dropdown-toggle">
-                    <i class="fa fa-cog fa-lg"></i>
+                   
+                    &nbsp;
+                    {{lS.authData.password.email}}&nbsp;
+                       
+                    <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
                    
